final polish and added validation to form

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,3 +36,18 @@
     </div>
 	</div>
 </div>
+<section class="container mt-5">
+	<div class="row">
+		<div class="col text-center">
+			<form name="burger" class="mx-auto" style="max-width: 500px" action="/burgers/create" method="POST">
+			  <p>Enter a burger you want to eat Click the "Submit" button.</p>
+				<div class="input-group">
+          <input name="burger_name" type="text" class="form-control form-control-lg" placeholder="e.g. Corn on the Cob Burger">
+          <div class="input-group-append">
+            <button class="btn btn-lg btn-primary valid" type="submit">Submit</button>
+          </div>
+        </div>
+			</form>
+		</div>
+	</div>
+</section>
