--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,6 @@
 		{{{ body }}}
 
 	<script	src="https://code.jquery.com/jquery-3.4.1.min.js"	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="/assets/script.js"></script>
+	<script src="/assets/burger.js"></script>
 	</body>
 </html>
